--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+
 //    implementation 'com.google.firebase:firebase-messaging:10.2.4'
     implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
     implementation 'com.android.support:design:27.1.1'
